# sendr

./: README.md  docker-compose.yml  env.sample  pyproject.toml
dashboard/dashboard/: settings.py
pgdatabase/: Dockerfile  db_schema.sql
tests/unit/: Dockerfile  config.json  conftest.py  settings.py
tests/unit/src/: test_pg_database_creation.py
