[tool.poetry]
name = "sendr"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
arq = "^0.22"
psycopg2-binary = "^2.9.1"
redis = "^3.5.3"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
django-debug-toolbar = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
